# fallback-generic-thermostat

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  configuration.yaml  docker-compose.yml  hacs.json  pyproject.toml  release-please-config.json  requirements.test.txt  setup.cfg
.github/: renovate.json5
.github/workflows/: ci.yml
custom_components/advanced_generic_thermostat/: __init__.py  const.py  manifest.json
custom_components/fallback_generic_thermostat/: climate.py
tests/: test_compatibility.py  test_init.py
